--- a/index.html
+++ b/index.html
@@ -63,5 +63,7 @@
       content="https://www.facebook.com/repiqueterea.art/"
     />
   </head>
-  <body></body>
+  <body>
+    <h1>SEO on page</h1>
+  </body>
 </html>
